fixed overlapping of text

--- a/frontend/stylus/style.styl
+++ b/frontend/stylus/style.styl
@@ -124,7 +124,6 @@ section *
   line-height 25px
 
 .tutorial-left-text
-  top 100px
   font-family $font-family-normal
   font-weight 300
   color $gray-font
@@ -144,3 +143,6 @@ section *
   background-color $nav-color
   font-family $font-family-helvetica
   font-size 25px
+
+.v-center
+  display table
